docs/chint/Rust/src/txt
error[E0308]: mismatched types
   --> src\main.rs:294:66
    |
294 |     NamedFile::open_async("index.html").await.unwrap_or_else(|_| HttpResponse::NotFound().body("index.html non trouvûˋ"))
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `NamedFile`, found `HttpResponse`
    |
    = note: expected struct `NamedFile`
               found struct `HttpResponse`

error[E0277]: the trait bound `Box<dyn SerialPort>: SerialPort` is not satisfied
   --> src\main.rs:105:18
    |
105 |         .map(|p| Box::new(p) as Box<dyn SerialPort>)
    |                  ^^^^^^^^^^^ the trait `SerialPort` is not implemented for `Box<dyn SerialPort>`
    |
help: the following other types implement trait `SerialPort`
   --> C:\Users\thier\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serialport-4.9.0\src\lib.rs:685:1
    |
685 | impl<T: SerialPort> SerialPort for &mut T {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&mut T`
    |
   ::: C:\Users\thier\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serialport-4.9.0\src\windows\com.rs:263:1
    |
263 | impl SerialPort for COMPort {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `COMPort`
    = note: required for the cast from `Box<Box<dyn SerialPort>>` to `Box<dyn SerialPort>`

error[E0599]: the method `clone` exists for enum `std::option::Option<Box<dyn SerialPort>>`, but its trait bounds were not satisfied
   --> src\main.rs:613:39
    |
613 |         port: Mutex::new(initial_port.clone()),
    |                                       ^^^^^ method cannot be called on `std::option::Option<Box<dyn SerialPort>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `Box<dyn SerialPort>: Clone`
            which is required by `std::option::Option<Box<dyn SerialPort>>: Clone`

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `chint_ats` (bin "chint_ats") due to 3 previous errors
